--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "server": "json-server db.json -w -d 750 -p 3333"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "axios": "^0.21.1",
     "date-fns": "^2.21.1",
     "next": "10.1.3",
     "rc-slider": "^9.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "sass": "^1.32.11"
   },
   "devDependencies": {
